# habit-hooks-ts

./: .gitignore  CLAUDE.md  DECISIONS.md  README.md  eslint.config.js  habit-sensors  habit-snooze  package.json  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml
docs/: DECISIONS.md  adapter-jq-based.spec.md  adapter.spec.md  architecture.md  authoring-plugins.spec.md  building-a-plugin.spec.md  checklist.md  config.example.toml  config.md  generic-plugin.spec.md  guide-includes.spec.md  guide.md  habit-hooks.spec.md  habit-mapper.spec.md  habit-sensors.spec.md  habit-snooze.spec.md  implementation.md  mapper.md  mapper.spec.md  open_questions.md  python-plugin.spec.md  sensor-interface.spec.md  sensors.md  sketching-with-llewellyn.md  smell-vocabulary.md  snoozer.md  snoozer.spec.md  typescript-based-implementation-plan.md  typescript-plugin.spec.md
plans/: phase-1-bootstrap.md  phase-2-rules-eslint-reporter.md  phase-3-config.md  phase-4-git-scope.md  phase-5-baseline.md  phase-6-builtin-defaults.md  phase-7-jscpd-init.md
plugins/generic/: pyproject.toml
plugins/php/: pyproject.toml
plugins/python/: config.toml  pyproject.toml
plugins/typescript/: config.toml  pyproject.toml
prompts/: build-core-mapper-snooze.md  build-spec-harness.md
specharness/: __init__.py  __main__.py  harness.py
src/: cli-output.test.ts  cli.test.ts  discover.ts  python-acceptance.test.ts  reporter.test.ts  reporter.ts  rule-files.ts  runner.test.ts  runner.ts  types.ts
src/baseline/: auto-prune.test.ts  auto-prune.ts  commands.test.ts  commands.ts  filter.test.ts  filter.ts  reap.ts  store.test.ts  store.ts
src/checks/: comment-check.test.ts  comment-check.ts  eslint-check.ts  eslint-wrap.test.ts  eslint-wrap.ts  jscpd-check.test.ts  jscpd-check.ts  (+8 more)
tests/: harness.py  test_function_length.py  test_harness.py  test_installed_wheel_smoke.py
(+122 files in other folders)
