[project]
name = "spec-harness"
version = "0.1.0"
description = "Test harness that runs the executable *.spec.md docs"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
spec-harness = "specharness.__main__:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["specharness"]
