[project]
name = "habit-hooks"
version = "0.0.0"
description = "Turn best-practice coding advice into AI habits — structural code-smell coaching for AI agents"
requires-python = ">=3.11"

[tool.uv]
# habit-hooks itself ships as plugin/skill files, not a Python package; this
# pyproject only wires up the dev tooling (the spec test harness under tests/).
package = false

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["tests"]
