[project]
name = "habit-hooks"
version = "0.0.0"
description = "Turn best-practice coding advice into AI habits — structural code-smell coaching for AI agents"
requires-python = ">=3.11"

[tool.uv]
# habit-hooks itself ships as plugin/skill files, not a Python package; this
# pyproject only wires up the dev tooling (the spec test harness under tests/).
package = false

[dependency-groups]
dev = ["pytest>=8", "markdown-it-py>=3"]

[tool.pytest.ini_options]
testpaths = ["tests", "docs"]
pythonpath = ["tests"]

[tool.deptry]
# `harness` and `tools` are our own packages (tests/, on pytest's pythonpath).
known_first_party = ["harness", "tools"]

[tool.deptry.per_rule_ignores]
# pytest is a dev-only test framework; its use in pytest's own conftest glue is
# expected, not a misplaced production dependency.
DEP004 = ["pytest"]
